--- a/install
+++ b/install
@@ -27,15 +27,15 @@ run_dotbot () {
 
   "$BASEDIR/$DOTBOT_DIR/$DOTBOT_BIN" \
     -d "$BASEDIR" \
-    --plugin-dir dotbot-brewfile \
+    --plugin-dir dotbot-brew \
     --plugin-dir dotbot-pip \
     -c "$config" $ARGS
 }
 
-run_dotbot 'steps/terminal.yml' || true
+run_dotbot 'steps/brew.yml' || true
 if [ "$CODESPACES" = true ]; then
   run_dotbot 'steps/codespaces.yml' || true
 else
-  run_dotbot 'steps/dependencies.yml' || true
+  run_dotbot 'steps/terminal.yml' || true
 fi
 run_dotbot 'steps/vscode.yml' || true
